# back

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: errors.py  main.py
app/clients/: kafka.py  model.py  postgres.py  redis.py
app/db/migrations/: V001_init.sql  V002_moderation_results.sql
app/models/: advertisement.py  async_predict.py  close_advertisement.py  moderation_result.py  user.py
app/repositories/: advertisements.py  moderation_results.py  prediction_cache.py  users.py
app/routers/: entities.py  predict.py
app/services/: model.py  moderation.py  prediction.py
app/workers/: moderation_worker.py
clients/: postgres.py
db/: migrations.yml
db/migrations/: V001_init.sql
models/: advertisement.py  advertisement_create.py
repositories/: advertisements.py  users.py
routers/: entities.py  predict.py
services/: model.py  moderation.py
tests/: test_async_moderation_endpoints.py  test_entities_close.py  test_moderation_worker.py  test_postgres_repositories_integration.py  test_predict.py  test_prediction_cache_storage.py  test_repositories.py
