[project]
name = "back"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiokafka>=0.13.0",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.128.0",
    "numpy>=2.4.1",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "scikit-learn>=1.8.0",
    "yandex-pgmigrate>=1.0.10",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
